--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,1 +1,9 @@
 <h1>トップページ</h1>
+<% if user_signed_in? %>
+  <%= "ようこそ！ #{@user.last_name} #{@user.first_name}さん" %>
+  <%= link_to 'マイページ', url: '#' %>
+  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to '新規登録', new_user_registration_path %>
+  <%= link_to 'ログイン', new_user_session_path %>
+<% end %>
