--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,14 @@
 <h1>マイページ</h1>
-<h3>基本情報</h3>
-<div>
-<%= "氏名：#{@user.last_name}#{@user.first_name}" %>
-</div>
-<% if current_user.id == @user.id %>
-  <div>
-  <%= "Email：#{@user.email}"%>
-  </div>
-<% end %>
 
+<h3>ユーザー名</h3>
+<%= "#{@user.last_name}#{@user.first_name}" %>
+<% if @user.id == current_user.id %>
+  <h3>メールアドレス</h3>
+  <%= @user.email %>
+<% end %>
+<h3>プロフィール</h3>
+<%= @user.profile%>
+
+<% if @user.id == current_user.id %>
+  <%= link_to '編集', edit_user_registration_path(@user) %>
+<% end %>
