軽微な修正

--- a/app/views/quests/new.html.erb
+++ b/app/views/quests/new.html.erb
@@ -29,7 +29,7 @@
 
   <div>
     <%= q.label :point, 'アピールポイント' %><br />
-    <%= q.text_field :point %>
+    <%= q.text_area :point %>
   </div>
 
   <div>
