--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -35,7 +35,18 @@
 <h3>・詳細情報</h3>
 <%= raw(nl2br(@quest.detail)) %><br />
 
+<% if current_user.id == @quest.user_id %>
+  <div>
+    <%= link_to '編集する', edit_quest_path(@quest) %>
+    <%= link_to '破棄する', quest_path(@quest), method: :delete %>
+  </div>
+<% else %>
+  <div>
+    <%= link_to '応募する', url:"#" %>
+  </div>
+<% end %>
+
+
 <div>
-<%= link_to '応募する', url:"#" %>
-<%= link_to 'トップページへ', root_path %>
+  <%= link_to 'トップページへ', root_path %>
 </div>
