--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     <div>
       <%= link_to "クエスト名：#{quest.title}", quest_path(quest) %><br />
-      <%= "募集者：#{quest.user.last_name}#{quest.user.first_name}さん" %><br />
+      <%= link_to "募集者：#{quest.user.last_name}#{quest.user.first_name}さん", user_path(quest.user) %><br />
       <%= "募集予定人数：#{quest.capacity}人" %><br />
       <%= "活動予定日：#{l quest.date}" %><br />
       <%= "活動地域：#{quest.place_name}" %><br />
