--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -10,17 +10,25 @@
 
 <div>
   <% @quest.each do |quest| %>
-    <%= link_to quest_path(quest) do %>
-      <%= image_tag quest.image.variant(gravity: :center, resize:"160x160^", crop:"640x640+0+0").processed if quest.image.attached? %>
-      <%= image_tag '1907765.png', size: '150x80' unless quest.image.attached? %>
-    <% end %>
-    <div>
-      <%= link_to "クエスト名：#{quest.title}", quest_path(quest) %><br />
-      <%= link_to "募集者：#{quest.user.last_name}#{quest.user.first_name}さん", user_path(quest.user) %><br />
-      <%= "募集予定人数：#{quest.capacity}人" %><br />
-      <%= "活動予定日：#{l quest.date}" %><br />
-      <%= "活動地域：#{quest.place_name}" %><br />
-      <%= link_to "現在の参加予定人数：#{quest.joins.count}人", quest_joins_path(quest)%>
+    <div class="row">
+      <div class="col s3 m3">
+        <div class="card hoverable">
+          <div class="card-image">
+            <%= link_to quest_path(quest) do %>
+              <%= image_tag quest.image.variant(gravity: :center, resize:"160x160^", crop:"320x320+0+0").processed if quest.image.attached? %>
+              <%= image_tag '1907765.png', size: '160x160' unless quest.image.attached? %>
+            <% end %>
+            <span class="card-title orange-text text-deep-orange darken-4"><%= quest.title %></span>
+          </div>
+          <div class="card-content">
+            <%= link_to "募集者：#{quest.user.last_name}#{quest.user.first_name}さん", user_path(quest.user) %><br />
+            <%= "募集予定人数：#{quest.capacity}人" %><br />
+            <%= "活動予定日：#{l quest.date}" %><br />
+            <%= "活動地域：#{quest.place_name}" %><br />
+            <%= link_to "現在の参加予定人数：#{quest.joins.count}人", quest_joins_path(quest)%>
+          </div>
+        </div>
+      </div>
     </div>
   <% end %>
 </div>
