インデックス１

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,9 @@
   color: rgb(66, 66, 66);
   padding-left: 17rem;
  }
+ .flexbox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: top;
+ }
