--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -1,18 +1,33 @@
-<h1>トップページ</h1>
-<% if user_signed_in? %>
-  <%= "ようこそ！ #{current_user.last_name}#{current_user.first_name}さん" %><br />
-  <%= link_to 'マイページ', user_path(current_user) %>
-  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to '新規登録', new_user_registration_path %>
-  <%= link_to 'ログイン', new_user_session_path %>
-<% end %>
+<div id="index-banner" class="parallax-container">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <br><br>
+      <h1 class="header center teal-text text-lighten-2">＃ガクチカ！</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+      </div>
+      <div class="row center">
+        <% if user_signed_in? %>
+          <%= "ようこそ！ #{current_user.last_name}#{current_user.first_name}さん" %><br />
+          <%= link_to 'マイページ', user_path(current_user) %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to '新規登録', new_user_registration_path %>
+          <%= link_to 'ログイン', new_user_session_path %>
+        <% end %>
+      </div>
+      <br><br>
+    </div>
+  </div>
+  <div class="parallax"><img src="/assets/images/pastel_00001.jpg" alt="Unsplashed background img 1"></div>
+</div>
+
 
 <div class="container brown lighten-2" style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
-  <div class="row" style="width: 100%;height: 100%;">
+  <div class="row">
     <div class="flexbox">
       <% @quest.each do |quest| %>
-        <div class="col s3 m4">
+        <div class="col s12 m4">
           <div class="card hoverable">
             <div class="card-image">
               <%= link_to quest_path(quest) do %>
@@ -22,11 +37,27 @@
               <span class="card-title orange-text text-deep-orange darken-4"><blockquote><%= quest.title %></blockquote></span>
             </div>
             <div class="card-content brown lighten-4">
-              <%= link_to "募集者：#{quest.user.last_name}#{quest.user.first_name}さん", user_path(quest.user) %><br />
-              <%= "募集予定人数：#{quest.capacity}人" %><br />
-              <%= "活動予定日：#{l quest.date}" %><br />
-              <%= "活動地域：#{quest.place_name}" %><br />
-              <%= link_to "現在の参加予定人数：#{quest.joins.count}人", quest_joins_path(quest)%>
+              <table class="responsive-table">
+                <thead style="width: 40%;">
+                  <tr>
+                    <th>募 集 者 </th>
+                    <th>募集人数</th>
+                    <th>活 動 日 </th>
+                    <th>活動地域</th>
+                    <th>参加人数</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td><%= link_to "#{quest.user.last_name}#{quest.user.first_name}さん", user_path(quest.user) %></td>
+                    <td><%= "#{quest.capacity}人" %></td>
+                    <td><%= "#{l quest.date}" %></td>
+                    <td><%= "#{quest.place_name}" %></td>
+                    <td><%= link_to "#{quest.joins.count}人", quest_joins_path(quest)%></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
