--- a/app/assets/stylesheets/quests.scss
+++ b/app/assets/stylesheets/quests.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the quests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ .wood{
+  background-image: 
+      url("/assets/wood-texture_00033.jpeg");
+  position: relative;
+  z-index: 0;
+ }
+ .wood::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  bottom: -5px;
+  left: -5px;
+  right: -5px;
+  background: inherit;
+  filter: blur(3px);
+  z-index: -1;
+ }
