--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -2,69 +2,88 @@
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center teal-text text-lighten-2 ">＃ガクチカ！</h1>
+      <h1 class="header center amber-text text-darken-2 ">＃ ガ ク チ カ ！</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <h5 class="header col s12">やらない善よりやる偽善</h5>
       </div>
+      <br><br>
       <div class="row center">
         <% if user_signed_in? %>
-          <%= "ようこそ！ #{current_user.last_name}#{current_user.first_name}さん" %><br />
+          <p>ようこそ！<%= "#{current_user.last_name}#{current_user.first_name}" %>さん！</p><br />
+            <a href="<%= user_path(current_user) %>" class="waves-effect waves-light btn">マイページ</a>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <p class="waves-effect waves-light btn">ログアウト</p>
+            <% end %>
         <% else %>
-          <%= link_to '新規登録', new_user_registration_path %>
-          <%= link_to 'ログイン', new_user_session_path %>
+          <p>さっそくログイン又は新規登録しましょう！</p><br>
+          <a href="<% new_user_registration_path %>" class="waves-effect waves-light btn">新規登録</a>
+          <a href="<% new_user_session_path %>" class="waves-effect waves-light btn">ログイン</a>
         <% end %>
       </div>
       <br><br>
     </div>
   </div>
-  <div class="parallax"><img src="/assets/pastel_00001.jpeg" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img src="/assets/sky_00010.jpeg" alt="Unsplashed background img 1"></div>
 </div>
 
 
-<div class="container brown lighten-2 z-depth-5" style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
-  <div class="row">
-    <div class="flexbox">
-      <% @quest.each do |quest| %>
-        <div class="col s12 m4">
-          <div class="card hoverable">
-            <div class="card-image">
-              <%= link_to quest_path(quest) do %>
-                <%= image_tag quest.image.variant(gravity: :center, resize:"160x160^", crop:"320x320+0+0").processed if quest.image.attached? %>
-                <%= image_tag '1907765.png', size: '260x260' unless quest.image.attached? %>
-              <% end %>
-              <span class="card-title orange-text text-deep-orange darken-4"><blockquote><%= quest.title %></blockquote></span>
-            </div>
-            <div class="card-content brown lighten-4">
-              <table class="responsive-table">
-                <thead style="width: 40%;">
-                  <tr>
-                    <th>募 集 者 </th>
-                    <th>募集人数</th>
-                    <th>活 動 日 </th>
-                    <th>活動地域</th>
-                    <th>参加人数</th>
-                  </tr>
-                </thead>
 
-                <tbody>
-                  <tr>
-                    <td><%= link_to "#{quest.user.last_name}#{quest.user.first_name}さん", user_path(quest.user) %></td>
-                    <td><%= "#{quest.capacity}人" %></td>
-                    <td><%= "#{l quest.date}" %></td>
-                    <td><%= "#{quest.place_name}" %></td>
-                    <td><%= link_to "#{quest.joins.count}人", quest_joins_path(quest)%></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+<div class="container row wood z-depth-5" style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
+    <% @quest.each do |quest| %>
+      <div class="col s12 m4 l2">
+        <div class="card hoverable">
+          <div class="card-image">
+            <%= link_to quest_path(quest) do %>
+              <%= image_tag quest.image if quest.image.attached? %>
+              <%= image_tag 'sky_00010.jpeg' unless quest.image.attached? %>
+            <% end %>
+            
+          </div>
+          <div class="card-tabs">
+            <ul class="tabs tabs-fixed-width  brown lighten-3">
+              <li class="tab"><p class="card-title"><%= quest.title %></p></li>
+            </ul>
+          </div>
+          <div class="card-content brown lighten-4">
+            <table class="responsive-table centered">
+              <thead>
+                <tr>
+                  <th>募 集 者 </th>
+                  <th>募集人数</th>
+                  <th>活 動 日 </th>
+                  <th>活動地域</th>
+                  <th>参加人数</th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <tr>
+                  <td><%= link_to "#{quest.user.last_name}#{quest.user.first_name}", user_path(quest.user) %></td>
+                  <td><%= "#{quest.capacity}人" %></td>
+                  <td><%= "#{l quest.date}" %></td>
+                  <td><%= "#{quest.place_name}" %></td>
+                  <td><%= link_to "#{quest.joins.count}人", quest_joins_path(quest)%></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
-      <% end %>
-    </div>
-  </div>
+      </div>
+    <% end %>
 </div>
+
+<div class="parallax-container valign-wrapper">
+    <div class="container">
+      <div class="row center">
+        <h4 class="header col s12">Hypocrisy is better than doing nothing!</h4>
+      </div>
+    </div>
+  <div class="parallax"><img src="/assets/tochi046.jpeg" alt="Unsplashed background img 2"></div>
+</div>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
-    const para = document.querySelector('.parallax');
+    const para = document.querySelectorAll('.parallax');
     M.Parallax.init(para,{});
 </script>
