軽微な修正

--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -16,8 +16,8 @@
             <% end %>
         <% else %>
           <p>さっそくログイン又は新規登録しましょう！</p><br>
-          <a href="<% new_user_registration_path %>" class="waves-effect waves-light btn">新規登録</a>
-          <a href="<% new_user_session_path %>" class="waves-effect waves-light btn">ログイン</a>
+          <a href="/users/sign_up" class="waves-effect waves-light btn">新規登録</a>
+          <a href="/users/sign_in" class="waves-effect waves-light btn">ログイン</a>
         <% end %>
       </div>
       <br><br>
