--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,53 @@
-<h2>新規登録</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :last_name, "Family name(苗字)" %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+<div class="container desc section " style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
+  <div class="register hoverable">
+    <div class="container">
+      <br>
+      <h3 class="header center">新規登録</h3>
+      <br><br>
+      <div class="row col s12">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+      
+        <div class="row">
+          <div class="input-field col s6">
+            <%= f.label :last_name, "Family name(苗字)" %>
+            <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+          </div>
+          <div class="input-field col s6">
+            <%= f.label :first_name, "First name(名前)" %>
+            <%= f.text_field :first_name, autocomplete: "first_name" %>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :email %>
+            <%= f.email_field :email, autocomplete: "email" %>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :password %>
+            <%= f.password_field :password, autocomplete: "new-password" %>
+            <span class="helper-text">半角英数字6文字以上で入力してください</span>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+        </div>
+    
+        <div class="row">
+          <div class="actions right-align">
+            <button class="btn waves-effect waves-light"><%= f.submit "登録する" %><i class="material-icons right">send</i></button>
+          </div>
+          <button class="btn waves-effect waves-teal btn-flat"><%= render "devise/shared/links" %></button>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :first_name, "First name(名前)" %><br />
-    <%= f.text_field :first_name, autocomplete: "first_name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "登録する" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
