--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,7 @@
     color: #000;
   }
   .desc{
-    background-image: url("/assets/22155507.jpg");
+    background-image: url("/assets/wood-texture_00033.jpeg");
     height: 100vh;
+    min-height: 100vh;
    }
