マイページ１

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,4 +5,33 @@
   background-image: url("/assets/2608796.jpg");
   margin: 0 20px 0;
  }
- 
+ .user-frame{
+  background-image: url("/assets/f1377_1.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+ }
+ .award-s{
+  background-image: url("/assets/award_S.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+ }
+ .award-a{
+  background-image: url("/assets/award_A.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+ }
+ .award-b{
+  background-image: url("/assets/award_B.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+ }
+ .award-c{
+  background-image: url("/assets/award_C.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+ }
+ .award-d{
+  background-image: url("/assets/award_D.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+ }
