--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,9 @@
     </main>
 
     <footer class="page-footer">
-      <div class="footer-copyright">
-        <div class="container">
-        © 2014 Copyright Text
+      <div class="footer-copyright" style="background-color: #64B5F6;">
+        <div class="container flex">
+        <p>© 2014 Copyright Text</p>
         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
       </div>
