--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,61 +1,81 @@
-<h2>登録内容の変更</h2>
+<div class="container desc section " style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
+  <div class="register hoverable">
+    <div class="container">
+      <br>
+      <h3 class="header center">登録内容の変更</h3>
+      <br><br>
+      <div class="row col s12">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+      
+        <div class="row">
+          <div class="field">
+            プロフィール画像<br />
+            <%= f.file_field :avatar %>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="input-field col s6">
+            <%= f.label :last_name, "Family name(苗字)" %>
+            <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+          </div>
+          <div class="input-field col s6">
+            <%= f.label :first_name, "First name(名前)" %>
+            <%= f.text_field :first_name, autocomplete: "first_name" %>
+          </div>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :avatar, "プロフィール画像" %><br />
-    <%= f.file_field :avatar %>
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :profile, "プロフィール" %>
+            <%= f.text_area :profile, autofocus: true %>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :email %>
+            <%= f.email_field :email, autocomplete: "email" %>
+          </div>
+        </div>
+      
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :password, "パスワード（変更）" %>
+            <%= f.password_field :password, autocomplete: "new-password" %>
+            <span class="helper-text">半角英数字6文字以上で入力してください</span>
+            <span class="helper-text">パスワードを変更しない場合は空白にしておいてください</span>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :password_confirmation, "パスワード（変更確認用）" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+            <span class="helper-text">パスワードを変更しない場合は空白にしておいてください</span>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.label :current_password, "パスワード" %>
+            <%= f.password_field :current_password, autocomplete: "current-password" %>
+            <span class="helper-text">登録内容を変更する際は現在お使いのパスワードを入力してください</span>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="actions right-align">
+            <button class="btn waves-effect waves-light"><%= f.submit "登録変更" %></button>
+          </div>
+          <button class="btn waves-effect waves-teal btn-flat"><a href="<%= user_path(@user) %>">マイページに戻る</a></button>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name, "Family name(苗字)" %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name, "First name(名前)" %><br />
-    <%= f.text_field :first_name, autocomplete: "first_name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :profile, "自己紹介(1,000文字まで)" %><br />
-    <%= f.text_area :profile, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password, "パスワード（変更）" %> <i>(パスワードを変更しない場合は空白にしておいてください)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %><em><%= @minimum_password_length %> 文字以上</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "パスワード（変更確認用）" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password, "パスワード" %> <i>(変更をする際は現在お使いのパスワードを入力してください)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<%#<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "マイページに戻る", user_path(@user) %>
+</div>
